Ported game from the previous version of the engine(the one before writing test cases) to the newest version